// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.maxima.sales.cli.grpc";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc EditCot (CotRequest) returns (CotResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message containing the quotation parameters
message CotRequest {
  int32 usuarioId = 1;
  int32 identificador = 2;
  int32 selectTipoCotizacion = 3;
  int32 idClienteOProspecto = 4;
  bool checkDescripcionLarga = 5;
  string observaciones = 6;
  double tipoCambio = 7;
  int32 monedaId = 8;
  string fecha = 9;
  int32 agenteId = 10;
  int32 vigencia = 11;
  bool incluyeIva = 12;
  double tcUSD = 13;

  message GridRenglonCot {
    int32 removido = 1;
    int32 idDetalle = 2;
    int32 idProducto = 3;
    int32 idPresentacion = 4;
    double cantidad = 5;
    double precio = 6;
    int32 monedaGrId = 7;
    string notr = 8;
    int32 idImpProd = 9;
    double valorImp = 10;
    int32 unidadId = 11;
    bool statusAutorizacion = 12;
    double precioAutorizado = 13;
    int32 idUserAut = 14;
    bool requiereAutorizacion = 15;
    string salvarRegistro = 16;
  }

  repeated GridRenglonCot extraData = 14;
}

// The response message containing the quotation's create/edit operation results
message CotResponse {
  string valorRetorno = 1;
}
